# cookiecutter-kata-catch

./: README.md  cookiecutter.json
{{ cookiecutter.kata|lower }}/: .gitignore  CMakeLists.txt  README.md
{{ cookiecutter.kata|lower }}/include/: {{ cookiecutter.kata }}.hpp
{{ cookiecutter.kata|lower }}/test/: {{ cookiecutter.kata }}Runner.cpp  {{ cookiecutter.kata }}Test.cpp
